--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,7 @@ RewriteBase /
 RewriteCond %{REQUEST_URI} !(/$|\.) 
 RewriteRule (.*) %{REQUEST_URI}/ [R=301,L]
 
+RewriteRule ^index\.html$ / [R=301,L]
+RewriteRule ^(.*)/index\.html$ /$1/ [R=301,L]
+
 ErrorDocument 404 /404.html
